[gd_scene load_steps=4 format=3 uid="uid://dh7tms48262s1"]

[ext_resource type="Theme" uid="uid://bpd47jtl2oji" path="res://Assets/Themes/popup_windows_big.tres" id="1_xyudg"]
[ext_resource type="Script" uid="uid://c74o60k0owr8y" path="res://Scripts/tutorial_popup.gd" id="2_uv2lm"]
[ext_resource type="Theme" uid="uid://gncnsqmk06nv" path="res://Assets/Themes/nice_buttons_long.tres" id="3_xyudg"]

[node name="TutorialPopup" type="RichTextLabel"]
offset_left = 176.0
offset_top = 124.0
offset_right = 862.0
offset_bottom = 507.0
theme = ExtResource("1_xyudg")
theme_override_font_sizes/normal_font_size = 40
text = "Your towers will  fire on
enemies. "
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_uv2lm")

[node name="Button" type="Button" parent="."]
process_mode = 2
z_index = 2
layout_mode = 0
offset_left = 160.0
offset_top = 273.0
offset_right = 296.0
offset_bottom = 338.0
theme = ExtResource("3_xyudg")
text = "Understood !"

[node name="Button2" type="Button" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 350.0
offset_top = 275.0
offset_right = 524.0
offset_bottom = 336.0
theme = ExtResource("3_xyudg")
text = "Skip tutorials"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
